# kodama-cpp

./: .gitignore  API_STABILITY.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROVENANCE.md  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  coverage.yml  docs.yml
benchmarks/: README.md  compare_metref_plslda_cpu_cuda.R  export_rdata_dataset_to_bin.R  inventory_jmlr_datasets.R  kodama_optimization_cycles.md  prepare_extra_benchmark_datasets.R  run_core_multi_dataset_benchmark.sh  run_core_sanity_bin.cpp  run_cuda_knn_benchmark.cpp  run_cv_sanity_bin.cpp  run_float32_smoke.sh  run_jmlr_ensemble_convergence.R  run_jmlr_m_tcycle_sensitivity.R  run_jmlr_nonspatial_panel.R  run_jmlr_release_validation.R  run_jmlr_release_validation.sh  run_kodama_backend_bin.cpp  run_metref_plslda_smoke.R  run_mnist70_sanity.cpp  run_native_backend_benchmark.cpp  run_pls50_all_benchmark_datasets.sh  run_spatial_umap_variant.R
cmake/: kodama-cppConfig.cmake.in
docs/: Doxyfile  backend-validation.md  coverage.md  getting-started.md  mainpage.md  previous-version-delta.md  r-api.md  release-validation.md
examples/: run_cv.cpp
include/kodama/: kodama.hpp  version.hpp
licenses/: FAISS-MLX-LICENSE  README.md
manuscript/: MANUSCRIPT_MAINTENANCE.md  README.md  build_jmlr_submission.py  build_kodama_manuscript.py  grfext.sty  kodama_cpp_jmlr_cover_letter.docx  kodama_cpp_jmlr_cover_letter.txt  kodama_cpp_jmlr_manuscript.docx  kodama_cpp_jmlr_mloss.tex  kodama_cpp_jmlr_self_review.docx  kodama_cpp_jmlr_submission_readiness.docx  kodama_cpp_jmlr_technical_supplement.tex  kodama_cpp_refs.bib  plot_nonspatial_panel.R
manuscript/jmlr_current_cran_20260719/: current_cran_comparison.csv  session-info.txt
manuscript/jmlr_historical_knn_20260716/: release_validation_plan.csv  release_validation_summary.csv
manuscript/jmlr_historical_knn_20260716/compactness/: MetRef__historical-r-2.4.1__knn__cpu__c1__historical_reference.csv  MetRef__kodama-cpp__knn__cpu__c1__historical_comparison_cpu1.csv  MetRef__kodama-cpp__knn__cpu__c4__historical_comparison_cpu4.csv  MetRef__kodama-cpp__knn__cuda__c4__historical_comparison_cuda.csv
manuscript/jmlr_nonspatial_panel_20260718/: nonspatial_panel_summary.csv
manuscript/jmlr_pilot_20260716/: ensemble_convergence_summary.csv  m_tcycle_sensitivity_summary.csv  release_validation_plan.csv  release_validation_summary.csv
split-repos/: README.md
split-repos/kodama-python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
split-repos/kodama-python/benchmarks/: run_br8100_merfish.py
split-repos/kodama-python/scripts/: export_spatial_rdata.R
split-repos/kodama-python/src/kodama/: __init__.py
split-repos/kodama-python/src/kodama_cpp_python/: bindings.cpp
split-repos/kodama-python/tests/: test_matrix.py
split-repos/kodama-r/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure
split-repos/kodama-r/R/: RcppExports.R  kodama.R
split-repos/kodama-r/inst/: INSTALL.md
split-repos/kodama-r/inst/benchmarks/: run_br8100_merfish.R
split-repos/kodama-r/man/: CoreKNN.Rd  CorePLSLDA.Rd  KNNCV.Rd  KODAMA.clustering.Rd  KODAMA.diagnostics.Rd  KODAMA.graph.Rd  KODAMA.timing.Rd  KODAMA.visualization.Rd  PLSLDACV.Rd  kodama_matrix.Rd  kodama_matrix_graph.Rd  kodama_pca.Rd
split-repos/kodama-r/src/: RcppExports.cpp  kodama_r.cpp
split-repos/kodama-r/tests/: testthat.R
split-repos/kodama-r/tests/testthat/: test-kodama-matrix.R
src/: common.cpp  common.hpp  core.cpp  cuda_simpls_float.cpp  embedding_cuda_kernels.cu  fastpls_cuda_simpls.cpp  graph_cluster.cpp  knncv.cpp  kodama_matrix.cpp  kodama_matrix_cuda.cu  kodama_matrix_cuda.hpp  metal_backend.hpp  metal_backend.mm  metal_backend_stub.cpp  native_cuda_backend.cu  native_cuda_backend.hpp  native_knn.cpp  native_knn.hpp  pca.cpp  pca_cuda.cu  pca_cuda_backend.hpp  pls_cknn_cuda.cu  pls_lda_cuda.cu  plscv.cpp  spatial_grid_knn.hpp  visualization.cpp
tests/: float32_install_consumer.cpp  test_cv.cpp  test_metal.cpp  test_public_api_0_1.cpp
tools/: check_license_headers.sh  make_release_archive.sh  run_chiamaka_cpu_cuda_parity.sh  run_chiamaka_wrapper_benchmarks.sh  run_classic_vs_kodama_visualization_benchmark.R  run_cpu_coverage.sh  run_jmlr_current_cran_comparison.R  run_m_tcycle_sensitivity.R  run_multicpu_vs_gpu_kodama_matrix.R  run_plslda_pca_m100_timed_benchmark.R  test_cpu_cuda_parity.R
wrappers/R/: kodama_matrix_temp.R  kodama_matrix_wrapper.cpp
